Add slider and dropdown

--- a/public/scss/_responsive.scss
+++ b/public/scss/_responsive.scss
@@ -2060,7 +2060,7 @@
   .footer-style-seven .bottom-footer .footer-nav a,
   .footer-style-seven .bottom-footer .social-icon a,
   .footer-style-eleven .bottom-footer .footer-nav a,
-  .footer-style-eleven .bottom-footer .social-icon a,
+  .social-icon a,
   .footer-style-two .bottom-footer .footer-nav a,
   .footer-style-two .bottom-footer .social-icon a,
   .footer-style-eight .bottom-footer .footer-nav a,
