--- a/public/scss/_style.scss
+++ b/public/scss/_style.scss
@@ -8175,13 +8175,13 @@ body .btn-twentySix:hover:after {
 .footer-style-eleven .bottom-footer .copyright {
   font-size: 15px;
 }
-.footer-style-eleven .bottom-footer .social-icon a {
+.social-icon a {
   font-size: 19px;
   margin-left: 19px;
   color: #333333;
   transition: all 0.3s ease-in-out;
 }
-.footer-style-eleven .bottom-footer .social-icon a:hover {
+.social-icon a:hover {
   color: var(--prime-two);
 }
 .footer-style-eleven .shape-one {
@@ -10476,6 +10476,3 @@ body .btn-twentySix:hover:after {
   top: 65%;
   left: 72%;
 }
-
-
-
